--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     //glide
     implementation "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
     kapt "com.github.bumptech.glide:compiler:$rootProject.ext.glideVersion"
+    implementation "jp.wasabeef:glide-transformations:$rootProject.ext.glidetransformationsVersion"
     //searchview
     implementation "com.github.arimorty:floatingsearchview:$rootProject.ext.searchViewVersion"
     //videoplayer
