--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.30'
+    ext.kotlin_version = '1.2.41'
     repositories {
         mavenCentral()
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -39,10 +39,12 @@ ext{
     rxVersion = 'v1.7.7.3'
     bottombarVersion = '2.3.1'
     baseRecyclerVersion = '2.9.38'
-    bannerVersion = '2.0.5'
+    bannerVersion = '1.4.10'
     retrofitVersion = '2.4.0'
     rxandroidVersion = '2.0.2'
     rxjavaVersion = '2.1.12'
     glideVersion = '4.7.1'
     searchViewVersion = '2.0.1'
+    videoplayerVersion = '6.2.9'
+    glidetransformationsVersion = '3.3.0'
 }
