--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ task clean(type: Delete) {
 }
 ext{
     // 版本号相关
-    versionCode = 1;
+    versionCode = 1
     versionName = '1.0.0'
 
     // 相关依赖库版本
